--- a/index.html
+++ b/index.html
@@ -1,51 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
   <link href = "css/style.css" rel = "stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
-
-  <title>Naver</title>
+  <title>Shopping Mall</title>
 </head>
-  <body>
-    <img src = "images/naver-logo.png" width = "200">  
-    <div class="menu">
-      <info href="#">네이버</info>
-      <info href="#">서비스</info>
-      <info href="#">가치실현</info>
-      <info href="#">홍보</info>
-      <info href="#">투자정보</info>
-      <info href="#">채용</info>
-    </div>
-    <img class="background" src = "images/img_flower.jpg" width = 100% height = 500px>  
+<body>
 
-    <h1><b>네이버 주요 서비스 소개</b></h1>
-    <div class="intro">
-      <h2>라인</h2>
-      <img class="poster" src="images/news_1548910509_971143_main1.jpg" width="800">
-      <h3>2011년 메신저 앱으로 시작한 LINE은 전 세계에서 가장 빠르게 성장한 글로벌 메신저 플랫폼으로, 이제는 메신저를 넘어 사람과 사람, 기업, 서비스를 연결하는 허브 역할을 하고 있습니다. LINE은 더 많은 글로벌 사용자에게 편리한 일상생활의 경험을 제공하기 위해 AI, 핀테크, 간편결제, 음악, 게임, 여행, 배달 서비스 등 다양한 앱을 연결하며 온라인과 오프라인 경계를 넘나들고 있습니다.</h3>
-      <h4>[Link]</h4>
-    </div>
+  <div class = "navibar">
+    <a href="#" id="logo">
+      <img src = "https://bakey.codeit.kr/files/629/images/logo.png" height="20">
+    </a>
 
-    <div class="intro">
-      <h2>라인</h2>
-      <img class="poster" src="images/5b029e008540841d2b68984a.png" width="800">
-      <h3>국내 대표 웹툰 플랫폼 네이버웹툰을 운영하는 네이버의 자회사로 2017년 5월 설립되었습니다. PC와 모바일에서 웹툰/웹소설/ 장르소설/만화를 비롯한 콘텐츠의 제작 및 유통에 힘쓰고 있으며, 특히 창작자의 저변 확대에 기여하고 있습니다.또한 영어와 중국어 인니어 등 6개 언어로, 다양한 국가의 글로벌 이용자들에게 매일매일 업데이트되는 웹툰 서비스를 제공하고 있으며, 앞으로도 다양한 콘텐츠와 AR, AI같은 새로운 기술의 결합으로 새로운 재미를 찾고, 글로벌로 더욱 뻗어나가는 창작 생태계를 마련할 예정입니다.</h3>
-      <h4>[Link]</h4>
-    </div>
+    <ul id="menu">
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Shop</a></li>
+      <li><a href="#">Cart</a></li>
+      <li><a href="#">Login</a></li>
+    </ul>
+  </div>
 
-    <div class="intro">
-      <h2>라인</h2>
-      <img class="poster" src="images/47351475559082.jpg" width="800">
-      <h3>2015년 9월 출시한 SNOW는 캠프모바일의 게릴라 프로젝트로 시작되었습니다. ‘일상을 보다 생생하고 재미있게 공유하자’는 서비스 콘셉트 아래 글로벌 시장에서 지속적인 성장세를 이어나가고 있는 스노우(snow)는 별도 법인으로 독립한 이후 다양하게 새로운 기술 결합 및 카메라 기술 고도화로 글로벌 시장에서 빠르게 시장 확대를 하고 있습니다.</h3>
-      <h4>[Link]</h4>
-    </div>
+  <div class = "header"></div>
 
-    <div class="copyright">
-      <pre>
-        Copyright Naver Corp. ALl Rights Reserved.
-        제휴 제안|기업윤리 상담센터|개인정보 처리방침
-      </pre>
-    </div>
-  </body>
+<div class="products">
+  <h3>Our New Products</h3>
+  <div class ="product-list">
+  <a href="#" class = "product">
+    <img src = "https://bakey.codeit.kr/files/629/images/sunglasses.jpg" width="225">
+    <div class="product-name">Sunglasses</div>
+    <div class="product-price">49,000</div>
+  </a>
+
+  <a href="#" class = "product">
+    <img src = "https://bakey.codeit.kr/files/629/images/wrist_watch.jpg" width="225">
+    <div class="product-name">Wrist Watch</div>
+    <div class="product-price">99,000</div>
+  </a>
+
+  <a href="#" class = "product">
+    <img src = "https://bakey.codeit.kr/files/629/images/fedora_hat.jpg" width="225">
+    <div class="product-name">Fedora Hat</div>
+    <div class="product-price">39,000</div>
+  </a>
+
+  <a href="#" class = "product">
+    <img src = "https://bakey.codeit.kr/files/629/images/classic_loafer.jpg" width="225">
+    <div class="product-name">Classic Loafer</div>
+    <div class="product-price">99,000</div>
+  </a>
+
+  <a href="#" class = "product">
+    <img src = "https://bakey.codeit.kr/files/629/images/pink_bag.jpg" width="225">
+    <div class="product-name">pink bag</div>
+    <div class="product-price">79,000</div>
+  </a>
+  <div class="clearfix"></div>
+</div>
+
+<div class ="footer">
+  <a href="http://facebook.com">
+    <img src="https://bakey.codeit.kr/files/629/images/facebook.png" height="20">
+  </a>
+
+  <a href="http://instagram.com">
+    <img src="https://bakey.codeit.kr/files/629/images/instagram.png" height="20">
+  </a>
+
+  <a href="http://twitter.com">
+    <img src="https://bakey.codeit.kr/files/629/images/twitter.png" height="20">
+  </a>
+</div>
+
+</body>
 </html>
